[package]
name = "tiny-agent-graph"
version = "0.0.1"
edition = "2021"
authors = ["Angelos Kapsimanis <you@example.com>"]
description = "Durable DAG runner and scheduler for agent workflows"
license = "MIT"
repository = "https://github.com/akxs14/sample-twin-task"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
petgraph = "0.6"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
predicates = "3"
assert_cmd = "2"

[lib]
name = "tiny_agent_graph"
path = "src/lib.rs"
